paddle move to left error fixed and scrollbar hidden

--- a/styles/game.css
+++ b/styles/game.css
@@ -1,22 +1,18 @@
-
-body {
-    background-image: url(../pixel-art_P7_720x448.gif);
-    background-size: cover;
-    background-position: fixed;
-    background-repeat: no-repeat;
-    min-width: 100%;
-    min-height: 100%;
-}
-
-.my_canvas {
-    width: 
+html { 
+  background: url(../pixel-art_P7_720x448.gif) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  overflow: hidden;
 }
 
 .fish_1 {
     max-width: 200px;
     max-height: 300px;
     transform: rotate(-90deg);
-    animation: swim1 3s ease-in-out infinite;
+    animation: swim1 2s ease-in-out infinite;
+    position: fixed;
 }
 
 .fish_2 {
